WebClient изменен на RestClient, расширен функционал планировщика: обновление устаревших ссылок и уведомление о них в тг бота